Stylesheet/emote/tag updates 2016-03-16

--- a/source-css/adagiodazzle.css
+++ b/source-css/adagiodazzle.css
@@ -18,7 +18,7 @@
 .linkflair-spoilers[data-fullname$="e"] .thumbnail, .linkflair-spoilers[data-fullname$="n"] .thumbnail,
 .linkflair-spoilers[data-fullname$="t"] .thumbnail, .linkflair-spoilers[data-fullname$="a"] .thumbnail { background-position: -0px -170px !important }
 
-.linkflair-spoilers .thumbnail.self { height: 64px !important }
+.linkflair-spoilers .thumbnail.self { height: 64px !important; background-position: 0 -120px !important }
 
 /*** Rating Tags ***/
 
@@ -504,7 +504,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 /*---------------- END COPY ----------------*/
 
-a[href|="/adagiosmirk"], a[href|="/adsmirk"], a[href|="/adagiodownvote"], a[href|="/addownvote"], a[href|="/failedaudition"], a[href|="/adagioreally"], a[href|="/adreally"], a[href|="/tickedadagio"], a[href|="/tickedad"], a[href|="/cooladagio"], a[href|="/coolad.png"], a[href|="/adagiowow"], a[href|="/adwow"], a[href|="/equestrianmagic"], a[href|="/adagiosings"], a[href|="/adsings"], a[href|="/adagiobattle"], a[href|="/adbattle"], a[href|="/awkwardadagio"], a[href|="/awkwardad"], a[href|="/adagiofacepalm"], a[href|="/adfacepalm"], a[href|="/adagiogrin"], a[href|="/adgrin"] {
+a[href|="/adagiosmirk"], a[href|="/adsmirk"], a[href|="/adagiodownvote"], a[href|="/addownvote"], a[href|="/failedaudition"], a[href|="/adagioreally"], a[href|="/adreally"], a[href|="/tickedadagio"], a[href|="/tickedad"], a[href|="/cooladagio"], a[href|="/coolad.png"], a[href|="/adagiowow"], a[href|="/adwow"], a[href|="/equestrianmagic"], a[href|="/adagiosings"], a[href|="/adsings"], a[href|="/adagiobattle"], a[href|="/adbattle"], a[href|="/awkwardadagio"], a[href|="/awkwardad"], a[href|="/adagiofacepalm"], a[href|="/adfacepalm"], a[href|="/adagiogrin"], a[href|="/adgrin"], a[href|="/adagioplease"], a[href|="/adplease"] {
   display: block;
   clear: none;
   float: left;
@@ -522,7 +522,7 @@ a[href|="/adagiowelcome"], a[href|="/adwelcome"], a[href|="/welcometotheshow"] {
   background-image: url(%%adagiohmotes%%) !important;
 }
 
-a[href|="/radagiosmirk"], a[href|="/radsmirk"], a[href|="/radagiodownvote"], a[href|="/raddownvote"], a[href|="/rfailedaudition"], a[href|="/radagioreally"], a[href|="/radreally"], a[href|="/rtickedadagio"], a[href|="/rtickedad"], a[href|="/rcooladagio"], a[href|="/rcoolad.png"], a[href|="/radagiowow"], a[href|="/radwow"], a[href|="/requestrianmagic"], a[href|="/radagiosings"], a[href|="/radsings"], a[href|="/radagiobattle"], a[href|="/radbattle"], a[href|="/rawkwardadagio"], a[href|="/rawkwardad"], a[href|="/radagiofacepalm"], a[href|="/radfacepalm"] {
+a[href|="/radagiosmirk"], a[href|="/radsmirk"], a[href|="/radagiodownvote"], a[href|="/raddownvote"], a[href|="/rfailedaudition"], a[href|="/radagioreally"], a[href|="/radreally"], a[href|="/rtickedadagio"], a[href|="/rtickedad"], a[href|="/rcooladagio"], a[href|="/rcoolad.png"], a[href|="/radagiowow"], a[href|="/radwow"], a[href|="/requestrianmagic"], a[href|="/radagiosings"], a[href|="/radsings"], a[href|="/radagiobattle"], a[href|="/radbattle"], a[href|="/rawkwardadagio"], a[href|="/rawkwardad"], a[href|="/radagiofacepalm"], a[href|="/radfacepalm"], a[href|="/radplease"], a[href|="/radagioplease"] {
   display: block;
   clear: none;
   float: left;
@@ -562,6 +562,7 @@ a[href|="/adagiobattle"], a[href|="/radagiobattle"], a[href|="/adbattle"], a[hre
 a[href|="/awkwardadagio"], a[href|="/rawkwardadagio"], a[href|="/awkwardad"], a[href|="/rawkwardad"] { background-position: -70px -140px; }
 a[href|="/adagiofacepalm"], a[href|="/radagiofacepalm"], a[href|="/adfacepalm"], a[href|="/radfacepalm"] { background-position: -140px -140px; }
 a[href|="/adagiogrin"], a[href|="/adgrin"] { background-position: -210px -140px; }
+a[href|="/adagioplease"], a[href|="/adplease"], a[href|="/radagioplease"], a[href|="/radplease"] { background-position: -0px -210px; }
 
 a[href|="/adagiosmile"], a[href|="/adsmile"], a[href|="/adagiolook"], a[href|="/adlook"], a[href|="/confidentadagio"], a[href|="/confidentad"], a[href|="/adagiorage"], a[href|="/adrage"], a[href|="/adagioponyshrug"], a[href|="/adpshrug"], a[href|="/adagiohmmm"], a[href|="/adhmmm"], a[href|="/adagiowhat"], a[href|="/adwhat"], a[href|="/adagiolean"], a[href|="/adlean"], a[href|="/adagioright"], a[href|="/adright"], a[href|="/adagiosad"], a[href|="/adsad"] {
   display: block;
