--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -823,6 +823,16 @@ background-position: -140px -700px;
 background-image: url(%%btlemotetable5%%)
 }
 
+a[href|="/bioinaboat"]{
+display:block;
+clear: none;
+float: left;
+width: 180px;
+height: 165px;
+background-position: 180px 165px;
+background-image: url(%%bioinabowl%%)
+}
+
 /* Sheet offsets */
 
 a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/crystalmuffins"], a[href|="/miggyb"], a[href|="/bpfight"], a[href|="/shiteatinggrin"] {
