--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -477,7 +477,7 @@ a[href|="/vanal"], a[href|="/creamparty"], a[href|="/vsdrip"], a[href|="/kittieb
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/scootabutt"], a[href|="/rubydrip"], a[href|="/trixiespread"], a[href|="/braeburnrope"] 
+a[href|="/scootabutt"], a[href|="/rubydrip"], a[href|="/trixiespread"], a[href|="/braeburnrope"], a[href|="/sexhappened"], a[href|="/twilightsuckit"] 
 {background-image:url(%%misfitsp%%);display:block;float:left;} 
 
 
@@ -611,4 +611,6 @@ a[href|="/scootabutt"] {width: 200px;height:191px;background-position: 0px -0px;
 a[href|="/rubydrip"] {width: 184px;height:200px;background-position: -200px -0px;}
 a[href|="/trixiespread"] {width: 227px;height:250px;background-position: 0px -200px;}
 a[href|="/braeburnrope"] {width: 200px;height:164px;background-position: 0px -452px;}
+a[href|="/sexhappened"] {width: 200px;height:177px;background-position: -227px -200px;}
+a[href|="/twilightsuckit"] {width: 189px;height:200px;background-position: -227px -377px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
