--- a/source-css/coloratura.css
+++ b/source-css/coloratura.css
@@ -17,7 +17,7 @@
 .linkflair-spoilers[data-fullname$="e"] .thumbnail, .linkflair-spoilers[data-fullname$="n"] .thumbnail,
 .linkflair-spoilers[data-fullname$="t"] .thumbnail, .linkflair-spoilers[data-fullname$="a"] .thumbnail { background-position: 0 -170px !important }
 
-.linkflair-spoilers .thumbnail.self { height: 64px !important }
+.linkflair-spoilers .thumbnail.self { height: 64px !important; background-position: 0 -120px !important }
 
 .linkflair-titlespoiler .linkflairlabel { display: none }
 .linkflair-titlespoiler p.title a.title { opacity: 0 }
