--- a/source-css/glimmerquisition.css
+++ b/source-css/glimmerquisition.css
@@ -261,7 +261,8 @@ a[href|="/starlightfrench"] {
   background-position: -70px -405px;
 }
 
-a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"], a[href|="/moondancerbook"], a[href|="/moondancercute"], a[href|="/moondancerangry"] {
+a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"], a[href|="/moondancerbook"], a[href|="/moondancercute"], a[href|="/moondancerangry"], a[href|="/moondancerincredulous"], a[href|="/moondancernotes"], a[href|="/moondancerchibi"], a[href|="/moondancerlistening"], 
+a[href|="/moondancercurious"], a[href|="/moondancercurious"], a[href|="/moondancercheery"] {
   float: left;
   display: block;
   height: 70px;
@@ -318,4 +319,32 @@ a[href|="/moondancerangry"] {
   background-position: -630px 0;
 }
 
+a[href|="/moondancerincredulous"] {
+  width: 70px;
+  background-position: -700px 0;
+}
 
+a[href|="/moondancernotes"] {
+  width: 70px;
+  background-position: -770px 0;
+}
+
+a[href|="/moondancerchibi"] {
+  width: 70px;
+  background-position: -840px 0;
+}
+
+a[href|="/moondancerlistening"] {
+  width: 70px;
+  background-position: -910px 0;
+}
+
+a[href|="/moondancercurious"] {
+  width: 70px;
+  background-position: -980px 0;
+}
+
+a[href|="/moondancercheery"] {
+  width: 70px;
+  background-position: -1050px 0;
+}
