--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -11,7 +11,7 @@ background: url(%%hertsback%%);
 position: fixed;
 width: 100%;
 height: 100%;
-top: 0;
+top: 0;d
 left: 0;
 opacity: .5;
 z-index: 999;
@@ -43,7 +43,7 @@ a { cursor: url(%%CursorHover%%), pointer; }
 /* Changes background  */
 
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%hoi%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%zootopia%%) fixed no-repeat 66% 100% !important;
 }go
 
 
@@ -795,6 +795,7 @@ a.author[href$=The_Assistant],
 a.author[href$=topkekbestkek],
 a.author[href$=DoomKey],
 a.author[href$=thisisgenny],
+a.author[href$=DRANKLE],
 a.author[href$=throwawayaccount997]
 
 { 
@@ -1060,9 +1061,9 @@ a.author[href$=The_Assistant]:before { content:"SuperAtomica" }
 a.author[href$=topkekbestkek]:before { content:"Partypoops McFlaccid" }
 a.author[href$=DoomKey]:before { content:"Scarfsickle" }
 a.author[href$=spearstuff]:before { content:"spearstuff" }
-a.author[href$=DRANKLE]:before { content:"T-Light aka " }
+a.author[href$=DRANKLE]:before { content:"T-Light aka NOT-DRANKLE" }
 a.author[href$=thisisgenny]:before { content:"genny" }
-a.author[href$=throwawayaccount997]:before { content:"Ta997" }
+a.author[href$=throwawayaccount997]:before { content:"Fritters" }
 
 /* Replacing puppy's name with a picture of derpy */
 a.author[href$=iiRockpuppy]:before 
@@ -1188,7 +1189,7 @@ a.author[href$="Sponce"]:after { content:" (lik dis f u cri evertim)"}
 a.author[href$=NeonSequitur]:after  { content:" (Is good anime)"}
 a.author[href$=scriptea]:after { content:" (Too main pone for background pone status)" }
 a.author[href$="ClopIsDisgusting"]:after  { content:" (Exists solely to shit on other people's fun)" }
-a.author[href$=Myrandall]:after { content:" (Should shut the hell up)" }
+a.author[href$=Myrandall]:after { content:" (Cares about your benis)" }
 a.author[href$=Chinch335]:after { content:" (brings the magic)" }
 a.author[href$=IllusionOf_Integrity]:after { content:" (participates in bringing the magic)" }
 a.author[href$=SkiidrowDash]:after { content:" (Lord of the Hamsters)" }
