--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -171,14 +171,14 @@ a[href="/sbtarget"],a[href="/sweetiebottarget"],a[href="/sbmissile"] {
     background-image: url(%%sbtarget%%) !important
 }
 
-a[href="/sbsquint"]{
+a[href="/sbsquint"],a[href="/sweetiesquint"] {
     background-position: 0px 0px;
     Display: block;
     Clear: none;
     Float: left;
     Width: 70px;
     Height: 70px;
-    background-image: url(%%sbsquint2%%) !important
+    background-image: url(%%sbsquint%%) !important
 }
 
 a[href="/hornymare"],a[href="/hornytwi"]{
