--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -674,7 +674,7 @@ display: none !important;
 .flair {
 border: 0px !important;
 padding:0px;
-background: url(%%spritesheetnew%%) no-repeat -9999px -9999px;
+background: url(%%spritesheet1-04%%) no-repeat -9999px -9999px;
 }
 
 
@@ -720,6 +720,7 @@ background: url(%%spritesheetnew%%) no-repeat -9999px -9999px;
 .flair-zecoraflair{ background-position: -80px -1040px; width: 30px; height: 30px; }
 .flair-leftyflair{ background-position: -80px -1118px; width: 30px; height: 30px; }
 .flair-thunderflair{ background-position: -80px -1201px; width: 30px; height: 30px; }
+.flair-starlightflair{ background-position: -80px -1280px; width: 30px; height: 30px; }
 
 a[href="/jclop"] {
 background-position: 0px 0px;
