--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -18,8 +18,7 @@
 .linkflair-spoilers[data-fullname$="e"] .thumbnail, .linkflair-spoilers[data-fullname$="n"] .thumbnail,
 .linkflair-spoilers[data-fullname$="t"] .thumbnail, .linkflair-spoilers[data-fullname$="a"] .thumbnail { background-position: -0px -170px !important }
 
-.linkflair-spoilers .thumbnail.self { height: 64px !important }
-
+.linkflair-spoilers .thumbnail.self { height: 64px !important; background-position: 0 -120px !important }
 
 /*** Rating Tags ***/
 
