--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -464,7 +464,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -476,8 +476,12 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"], a[href|="/sbwhy"], a[href|="/sillyblep"], a[href|="/twipancake"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"], a[href|="/sbwhy"], a[href|="/sillyblep"], a[href|="/twipancake"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"], a[href|="/rainbowshparkle"], a[href|="/pinkiesecret"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
+
+/* 100x100d 'motes */
+a[href|="/vinylscrewyou"], a[href|="/browniewat"]
+{background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
 a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"], a[href|="/tiadisapproval"]
@@ -496,7 +500,7 @@ a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150e 'motes */
-a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"], a[href|="/kittenbloom"], a[href|="/mint"], a[href|="/crazyrainbowicorn"], a[href|="/communerd"], a[href="/starlightnerd"], a[href|="/sillybeecuddle"], a[href|="/trilbybelle"], a[href|="/fedorabelle"]
+a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"], a[href|="/kittenbloom"], a[href|="/mint"], a[href|="/crazyrainbowicorn"], a[href|="/communerd"], a[href="/starlightnerd"], a[href|="/sillybeecuddle"], a[href|="/trilbybelle"], a[href|="/fedorabelle"], a[href|="/rarityspeechless"]
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -569,7 +573,7 @@ a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fsw
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /* Misfits n */
-a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"]
+a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"]
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /*
@@ -577,11 +581,11 @@ a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"]
  */
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"], a[href|="/boopening"], a[href|="/trixcookie"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"], a[href|="/boopening"], a[href|="/trixcookie"], a[href|="/vinylscrewyou"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"], a[href|="/venonat"], a[href|="/buysomeapples"], a[href|="/trixiecrazy"], a[href|="/agentt"], a[href|="/spitfirejudge"]
+a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"], a[href|="/venonat"], a[href|="/buysomeapples"], a[href|="/trixiecrazy"], a[href|="/agentt"], a[href|="/spitfirejudge"], a[href|="/browniewat"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
@@ -605,19 +609,19 @@ a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pink
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"], a[href|="/deeplyintriguedcadance"], a[href|="/bloomening"]
+a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"], a[href|="/deeplyintriguedcadance"], a[href|="/bloomening"], a[href|="/twicheesy"]
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"], a[href|="/fritterugh"], a[href|="/frittugh"]
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"]
+a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"], a[href|="/celestiahh"]
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
@@ -649,11 +653,11 @@ a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/sco
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"]
+a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"], a[href|="/rarityspeechless"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"]
+a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"], a[href|="/rarityspeechless"]:hover
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
@@ -729,11 +733,11 @@ a[href|="/karmahappy"], a[href|="/scootles"], a[href|="/octaviamanic"], a[href|=
 {background-position: -100% -1200%;}
 
 /* Grid pos 2,12 'motes */
-a[href|="/discentiaelated"], a[href|="/raritylipbite"], a[href|="/rubylewd"]
+a[href|="/discentiaelated"], a[href|="/raritylipbite"], a[href|="/rubylewd"], a[href|="/rainbowshparkle"]
 {background-position: -200% -1200%;}
 
 /* Grid pos 0,13 'motes */
-a[href|="/cadshrug"], a[href|="/cheekyjack"], a[href|="/fsnotmad"]
+a[href|="/cadshrug"], a[href|="/cheekyjack"], a[href|="/fsnotmad"], a[href|="/pinkiesecret"]
 {background-position: 0 -1300%;}
 
 /* Grid pos 1,13 'motes */
@@ -1308,3 +1312,5 @@ a[href|="/scootawan"] {width:150px;height:99px;background-position: -394px -633p
 a[href|="/sunburst"] {width:100px;height:150px;background-position: -166px -483px;}
 a[href|="/apathiawhatareyoudoing"] {width:95px;height:200px;}
 a[href|="/doubletrix"] {width:126px;height:150px;background-position: -95px 0;}
+a[href|="/catscratch"] {width:92px;height:150px;background-position: -221px 0;}
+a[href|="/flutterawe"] {width:98px;height:107px;background-position: -313px 0;}
